<resources>
    <string name="app_name">BMO</string>
    <string name="nord">Nord</string>
    <string name="gauche"><![CDATA[<]]></string>
    <string name="droite"><![CDATA[>]]></string>
    <string name="photo">Photo</string>
    <string name="ajouter_porte">Ajouter porte</string>
    <string name="todo">TODO</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="information">information</string>
</resources>