<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PhotoDePiece" android:background="#E8F4EB" android:id="@+id/photo">

    <TextView
            android:text="@string/nord"
            android:layout_width="134dp"
            android:layout_height="50dp" android:id="@+id/orientation"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="#21848D"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/gauche"
            android:layout_width="94dp"
            android:layout_height="121dp" android:id="@+id/Gauche"
            android:textColor="#0D333F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:backgroundTint="#21848D"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/droite"
            android:layout_width="95dp"
            android:layout_height="122dp" android:id="@+id/Droite"
            android:textColor="#0D333F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#21848D"/>
    <Button
            android:text="@string/photo"
            android:layout_width="217dp"
            android:layout_height="58dp" android:id="@+id/Photo"
            app:layout_constraintStart_toEndOf="@+id/Gauche"
            android:textColor="#0D333F"
            app:layout_constraintEnd_toStartOf="@+id/Droite"
            app:layout_constraintBottom_toTopOf="@+id/AjouterPorte"
            app:layout_constraintTop_toBottomOf="@+id/ImageViewPhoto" android:backgroundTint="#21848D"
            tools:ignore="TextContrastCheck,TextContrastCheck"/>
    <Button
            android:text="@string/ajouter_porte"
            android:layout_width="212dp"
            android:layout_height="54dp" android:id="@+id/AjouterPorte"
            android:textColor="#0D333F"
            app:layout_constraintStart_toEndOf="@+id/Gauche"
            app:layout_constraintEnd_toStartOf="@+id/Droite"
            app:layout_constraintTop_toBottomOf="@+id/Photo" app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#21848D"
    />
    <ImageView
            android:layout_width="403dp"
            android:layout_height="535dp" app:srcCompat="@drawable/adventure_time_bmo_png_file"
            android:id="@+id/ImageViewPhoto"
            app:layout_constraintTop_toBottomOf="@+id/orientation"
            app:layout_constraintBottom_toTopOf="@+id/Photo" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/todo"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_dialog_info"
            android:id="@+id/informationButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="84dp"
            app:layout_constraintStart_toEndOf="@+id/orientation" android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/ImageViewPhoto" android:contentDescription="TODO"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_dialog_info"
            android:id="@+id/imageButton5"
            android:contentDescription="@android:string/untitled" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="132dp" android:layout_marginStart="156dp"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>